fix text on dark mode

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -72,6 +72,9 @@
   color: var(--dark-mode-text);
 }
 
+#dark .noCountryFound {
+  color: var(--dark-mode-text);
+}
 
 
 /* Responsive Design */
